# scapy47.github.io

./: .gitignore  README.md  astro.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.mjs  tsconfig.json  tsconfig.react.json  tsconfig.solid.json
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/workflows/: deploy-pnpm.yml  deploy.yml
src/: content.config.ts
src/components/: Marquee.astro  P5Wrapper.astro  P5_wrapper.astro  P5wrapper.tsx  Strip.astro  Ticker.astro  marquee.astro  navbar.astro  posthog.astro
src/components/demos/: Demo.tsx  Graph.tsx  P5demo.tsx  Test.tsx
src/components/react/: Hacktxt.tsx
src/components/react/demos/: Demo.tsx  Graph.tsx  (+2 more)
src/components/solid/: Counter.tsx
src/components/ui/: Hacktxt.tsx  window.tsx
src/content/: config.ts
src/content/.obsidian/: appearance.json  community-plugins.json  workspace.json
src/content/math/: First.mdx  test.mdx
src/contents/: Hello world.md
src/contents/.obsidian/: app.json  appearance.json  community-plugins.json  graph.json  workspace.json
src/contents/maths/: Vectors.md  Vectors.mdx
src/contents/miscellaneous/: test.md
src/layouts/: BlogLayout.astro  Layout.astro  NotesLayout.astro  PlaygroundLayout.astro
src/pages/: 404.astro  [slug].astro  index.astro  manim.astro  math.astro  playground.astro
src/pages/blogs/: [...slug].astro
src/pages/notes/: [...slug].astro  index.astro  math.astro
src/pages/tools/: yt.astro
src/py/: calculus.py  light.py  manim.cfg  pyproject.toml
src/styles/: global.css  snippet.module.css
(+13 files in other folders)
